@@ -33,6 +33,7 @@
 #include "pdscalibdata/PnccdBaseV1.h"
 #include "pdscalibdata/PrincetonBaseV1.h" // shape_base(), Ndim, Rows, Cols, Size, etc.
 #include "pdscalibdata/AndorBaseV1.h"
+#include "pdscalibdata/Andor3dBaseV1.h"
 #include "pdscalibdata/Epix100aBaseV1.h"
 #include "pdscalibdata/VarShapeCameraBaseV1.h"
 //#include "pdscalibdata/Opal1000BaseV1.h"
@@ -484,6 +485,7 @@ template class PSCalib::GenericCalibPars<pdscalibdata::CsPad2x2BaseV2>;
 template class PSCalib::GenericCalibPars<pdscalibdata::PnccdBaseV1>;
 template class PSCalib::GenericCalibPars<pdscalibdata::PrincetonBaseV1>;
 template class PSCalib::GenericCalibPars<pdscalibdata::AndorBaseV1>;
+template class PSCalib::GenericCalibPars<pdscalibdata::Andor3dBaseV1>;
 template class PSCalib::GenericCalibPars<pdscalibdata::Epix100aBaseV1>;
 template class PSCalib::GenericCalibPars<pdscalibdata::VarShapeCameraBaseV1>;
 //template class PSCalib::GenericCalibPars<pdscalibdata::Opal1000BaseV1>;
